// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SociogramBackground /> renders ok for image 1`] = `
<div
  className="canvas-background"
>
  <Connect(withState(lifecycle(mapProps(BackgroundImage))))
    asset="map.png"
    className="canvas-background__image"
  />
</div>
`;

exports[`<SociogramBackground /> renders ok for radar 1`] = `
<div
  className="canvas-background"
>
  <Radar
    n={4}
    skewed={true}
  />
</div>
`;
